--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/tailwind": "^6.0.2",
-    "astro": "^5.7.9",
-    "lenis": "^1.1.18",
-    "tailwindcss": "^3.4.16"
+    "@tailwindcss/vite": "^4.1.16",
+    "astro": "^5.15.3",
+    "tailwindcss": "^4.1.16"
   }
 }
